@@ -9,6 +9,7 @@ Version 1.0
 
   * Io
   * Smalltalk
+  * Darcs patches
 
 - Handle format specifications in the Perl lexer.
 
